# FamilyFinanceHub

./: .dockerignore  .env.example  .gitignore  GEMINI.md  README.md  docker-compose.prod.yml  docker-compose.yml  docker-composer.override.yml
backend/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/apps/core/: serializers.py  views.py
backend/apps/core/management/commands/: wait_for_db.py
backend/apps/finances/: admin.py  apps.py  models.py  serializers.py  signals.py
backend/apps/finances/migrations/: 0001_initial.py
backend/apps/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/users/management/commands/: init_superuser.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: __init__.py  settings.py  urls.py
backend/config/settings/: base.py  callbacks.py  development.py  production.py
backend/locale/es/LC_MESSAGES/: django.mo  django.po
backend/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
backend/requirements/: base.txt  development.txt  production.txt
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/nginx/: nginx.conf  nginx.prod.conf
frontend/scripts/: entrypoint.sh
frontend/src/: App.jsx  App.tsx
